--- a/cms/app/views/layouts/email_templates/dm_cms_email_layout.html.erb
+++ b/cms/app/views/layouts/email_templates/dm_cms_email_layout.html.erb
@@ -167,12 +167,16 @@
       margin-bottom: 30px;
     }
     .bodyContent blockquote p {
-      border-left: 3px solid silver;
       padding-bottom: 5px;
       margin-bottom: 10px;
       padding-left: 5px;
       margin-left: 10px;
       margin-right: 0;
+      font-size: 16px;
+      text-align: center;
+    }
+    .bodyContent blockquote footer {
+      text-align: center;
     }
     .bodyContent .date {
       text-align: right;
