--- a/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
@@ -47,7 +47,7 @@
         <%= panel title: @current_page.pagetype_name, body: true do %>
           <p>This page will automatically re-direct to another internal/external page.</p>
           <dl class="dl-horizontal">
-            <dt>Specified Link</dt>
+            <dt>Specified URL</dt>
             <dd><%= @current_page.link %></dd>
             <dt>Will Redirect To</dt>
             <dd>
