added Vimeo link to site metadata configuration

--- a/core/app/views/dm_core/admin/accounts/metadata.html.erb
+++ b/core/app/views/dm_core/admin/accounts/metadata.html.erb
@@ -13,6 +13,7 @@
     <%= f.input :preferred_site_description,  label: 'Site Description', hint: 'Description embedded into each page (meta name="description")' %>
     <%= f.input :preferred_facebook_url,      label: 'Facebook URL' %>
     <%= f.input :preferred_youtube_url,       label: 'YouTube URL' %>
+    <%= f.input :preferred_vimeo_url,         label: 'Vimeo URL' %>
     <%= f.input :preferred_twitter_url,       label: 'Twitter URL' %>
     <%= f.input :preferred_linkedin_url,      label: 'LinkedIn URL' %>
 
