--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -44,7 +44,7 @@
             <th width=70 style="white-space:nowrap"><span>Receipt</span></th>
             <th>Name</th>
             <th width=25>Balance</th>
-            <th class="date" style="white-space:nowrap">Registered</th>
+            <th class="date">Registered</th>
             <th class="date">Last Login</th>
           </tr>
         </thead>
