--- a/admin/app/assets/stylesheets/admin_theme/theme_customization.css
+++ b/admin/app/assets/stylesheets/admin_theme/theme_customization.css
@@ -63,6 +63,60 @@ h6.panel-title { font-weight: 300; font-size: 1em;}
   border-top: 0px solid #ddd;
 }
 
+/*--- Pagination ---*/
+.pagination > li > a,
+.pagination > li > span {
+  padding: 3px 10px;
+}
+
+
+/*--- DataTables ---*/
+.panel > .dataTables_wrapper .table-bordered  {
+  border-left: none;
+  border-right: none;
+}
+
+.panel > .dataTables_wrapper .dataTables_length,
+.panel > .dataTables_wrapper .dataTables_info  {
+  margin-left: 15px;
+}
+
+.panel > .dataTables_wrapper .dataTables_filter,
+.panel > .dataTables_wrapper .dataTables_paginate  {
+  margin-right: 15px;
+}
+
+table.dataTable .sorting_1 {
+  background-color: #f8f8f8;
+}
+
+table.dataTable tr.group-start td {
+  background-color: white !important;
+  padding-top: 20px;
+  border-bottom: 1px solid #ffffff !important;
+}
+
+table.dataTable tr.group-end {
+  border-bottom: none !important;
+}
+
+table.dataTable tr.group-end td {
+  background-color: #f5f5f5 !important;
+  border-right: none !important;
+  font-style: italic;
+  font-size: small;
+}
+
+table.dataTable.table-condensed > thead > tr > th {
+  padding-right: 25px;
+}
+
+table.dataTable tr.grouping_header th {
+  font-style: italic;
+  font-weight: normal;
+  border-bottom: none;
+}
+
 /*--- Side and bottom tabs ---*/
 
 .tabs-below > .nav-tabs,
@@ -997,15 +1051,11 @@ ul.list-justified li {
 .date { white-space: nowrap; }
 .with-padding { padding: 16px; }
 .progress-micro { height: 2px; }
-.progress-thin { height: 5px; margin-bottom: 5px;
-}
+.progress-thin { height: 5px; margin-bottom: 5px; }
+.nowrap { white-space: nowrap; }
 
-.slim-progress {
-  margin-bottom: 15px;
-}
-.slim-progress .bottom_label {
-  font-size: 12px;
-}
+.slim-progress { margin-bottom: 15px; }
+.slim-progress .bottom_label { font-size: 12px; }
 .well {
   background-color: #fbfbfb;
   box-shadow: none;
