--- a/event/app/assets/stylesheets/dm_event/admin.css
+++ b/event/app/assets/stylesheets/dm_event/admin.css
@@ -2,6 +2,9 @@
 	http://dev.kaleshwar.de:3000/assets/dm_event/admin.css?body=1
 	http://dev.kaleshwar.de:3200/assets/dm_event/admin.css?body=1 */
 
+
+.receipt_code { white-space: nowrap; }
+
 /*=== color for various state labels/status boxes ===*/
 
 .submitted_color { color: #c0c700;}
